[package]
name = "actix-web-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0"
serde = { version = "1.*", features = ["derive"] }
env_logger = "0.9.*"
log = "0.4.0"
derive_more = "0.99.17"